oCommit - Fix Spacing

--- a/index.css
+++ b/index.css
@@ -2,7 +2,9 @@
 /* CSS Document */
 h2 {
 	text-align: center;
+	margin-top: 2em;
 }
+
  img {
 	display: block;
 	margin-left: auto;
